--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
     width: 100%;
     height: 115px;
     overflow: hidden;
+    outline: none;
+    color: #fff;
+    background-color: lightgray;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+  }
+  button:active {
+    background-color: lime;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
   }
   button.box .overlay{
     display:block;
@@ -164,7 +175,7 @@
     height: 200px;
   }
   button.box.active{
-    background: gold;
+    background: limegreen;
   }
   </style>
   <script>
