--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -16,7 +17,18 @@
   }
   /* small screen < 600px width */
   @media (max-width:600px){
+    #addButton{
+      animation: zoomInUp .2s;
+      animation-fill-mode: both;
+    }
+    body.selected1 #addButton,
+    body.selected2 #addButton{
+      animation: zoomOutDown .2s;
+      animation-fill-mode: both;
+    }
     #tzList{
+      animation: slideInLeft .5s;
+      animation-fill-mode: both;
         width: 100%;
     }
     #clockWrapper{
@@ -26,12 +38,16 @@
       display:none;
     }
     body.selected #backButton{
+      animation: slideInLeft .5s;
+      animation-fill-mode: both;
       display:block;
     }
     body.selected #tzList{
       display: none;
     }
     body.selected #clockWrapper{
+      animation: slideInRight .5s;
+      animation-fill-mode: both;
       display: block;
     }
 
